test/functional/vpc/expected.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
    Vpc:
        Type: 'AWS::EC2::VPC'
        Properties:
            CidrBlock: 10.0.0.0/16
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: app
    VpcInternetGateway:
        Type: 'AWS::EC2::InternetGateway'
        Properties:
            Tags:
                - Key: Name
                  Value: app-igw
                - Key: Network
                  Value: Public
    VpcInternetGatewayAttachment:
        Type: 'AWS::EC2::VPCGatewayAttachment'
        Properties:
            InternetGatewayId:
                Ref: VpcInternetGateway
            VpcId:
                Ref: Vpc
    SubnetPublicUsEast1a:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId:
                Ref: Vpc
            AvailabilityZone: us-east-1a
            CidrBlock: 10.0.32.0/19
            Tags:
                - Key: Name
                  Value: app-public-us-east-1a
                - Key: Network
                  Value: Public
    RouteTablePublicUsEast1a:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId:
                Ref: Vpc
            Tags:
                - Key: Name
                  Value: app-public-us-east-1a
                - Key: Network
                  Value: Public
    RouteTableAssociationPublicUsEast1a:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            SubnetId:
                Ref: SubnetPublicUsEast1a
            RouteTableId:
                Ref: RouteTablePublicUsEast1a
    RoutePublicUsEast1a:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId:
                Ref: RouteTablePublicUsEast1a
            GatewayId:
                Ref: VpcInternetGateway
        DependsOn:
            - VpcInternetGatewayAttachment
    SubnetPublicUsEast1b:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId:
                Ref: Vpc
            AvailabilityZone: us-east-1b
            CidrBlock: 10.0.96.0/19
            Tags:
                - Key: Name
                  Value: app-public-us-east-1b
                - Key: Network
                  Value: Public
    RouteTablePublicUsEast1b:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId:
                Ref: Vpc
            Tags:
                - Key: Name
                  Value: app-public-us-east-1b
                - Key: Network
                  Value: Public
    RouteTableAssociationPublicUsEast1b:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            SubnetId:
                Ref: SubnetPublicUsEast1b
            RouteTableId:
                Ref: RouteTablePublicUsEast1b
    RoutePublicUsEast1b:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId:
                Ref: RouteTablePublicUsEast1b
            GatewayId:
                Ref: VpcInternetGateway
        DependsOn:
            - VpcInternetGatewayAttachment
    SubnetPublicUsEast1c:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId:
                Ref: Vpc
            AvailabilityZone: us-east-1c
            CidrBlock: 10.0.160.0/19
            Tags:
                - Key: Name
                  Value: app-public-us-east-1c
                - Key: Network
                  Value: Public
    RouteTablePublicUsEast1c:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId:
                Ref: Vpc
            Tags:
                - Key: Name
                  Value: app-public-us-east-1c
                - Key: Network
                  Value: Public
    RouteTableAssociationPublicUsEast1c:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            SubnetId:
                Ref: SubnetPublicUsEast1c
            RouteTableId:
                Ref: RouteTablePublicUsEast1c
    RoutePublicUsEast1c:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId:
                Ref: RouteTablePublicUsEast1c
            GatewayId:
                Ref: VpcInternetGateway
        DependsOn:
            - VpcInternetGatewayAttachment
    SubnetPrivateUsEast1a:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId:
                Ref: Vpc
            AvailabilityZone: us-east-1a
            CidrBlock: 10.0.0.0/19
            Tags:
                - Key: Name
                  Value: app-private-us-east-1a
                - Key: Network
                  Value: Private
    RouteTablePrivateUsEast1a:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId:
                Ref: Vpc
            Tags:
                - Key: Name
                  Value: app-private-us-east-1a
                - Key: Network
                  Value: Private
    RouteTableAssociationPrivateUsEast1a:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            SubnetId:
                Ref: SubnetPrivateUsEast1a
            RouteTableId:
                Ref: RouteTablePrivateUsEast1a
    SubnetPrivateUsEast1b:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId:
                Ref: Vpc
            AvailabilityZone: us-east-1b
            CidrBlock: 10.0.64.0/19
            Tags:
                - Key: Name
                  Value: app-private-us-east-1b
                - Key: Network
                  Value: Private
    RouteTablePrivateUsEast1b:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId:
                Ref: Vpc
            Tags:
                - Key: Name
                  Value: app-private-us-east-1b
                - Key: Network
                  Value: Private
    RouteTableAssociationPrivateUsEast1b:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            SubnetId:
                Ref: SubnetPrivateUsEast1b
            RouteTableId:
                Ref: RouteTablePrivateUsEast1b
    SubnetPrivateUsEast1c:
        Type: 'AWS::EC2::Subnet'
        Properties:
            VpcId:
                Ref: Vpc
            AvailabilityZone: us-east-1c
            CidrBlock: 10.0.128.0/19
            Tags:
                - Key: Name
                  Value: app-private-us-east-1c
                - Key: Network
                  Value: Private
    RouteTablePrivateUsEast1c:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            VpcId:
                Ref: Vpc
            Tags:
                - Key: Name
                  Value: app-private-us-east-1c
                - Key: Network
                  Value: Private
    RouteTableAssociationPrivateUsEast1c:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            SubnetId:
                Ref: SubnetPrivateUsEast1c
            RouteTableId:
                Ref: RouteTablePrivateUsEast1c
    AppSecurityGroup:
        Type: 'AWS::EC2::SecurityGroup'
        Properties:
            GroupDescription: Application security group
            VpcId:
                Ref: Vpc
            SecurityGroupEgress:
                - Description: Allow all output requests
                  IpProtocol: '-1'
                  CidrIp: 0.0.0.0/0
            SecurityGroupIngress:
                - Description: Allow HTTPS inbound
                  IpProtocol: tcp
                  FromPort: 443
                  ToPort: 443
                  CidrIp: 0.0.0.0/0
            Tags:
                - Key: Name
                  Value: app-app-sg
    AppSecurityGroupEgress:
        Type: 'AWS::EC2::SecurityGroupEgress'
        Properties:
            Description: Allow Lambda to access MySQL in the DBSecurityGroup
            GroupId:
                Ref: AppSecurityGroup
            IpProtocol: tcp
            FromPort: 3306
            ToPort: 3306
            DestinationSecurityGroupId:
                Ref: DbSecurityGroup
    DbSecurityGroup:
        Type: 'AWS::EC2::SecurityGroup'
        Properties:
            GroupDescription: Database security group
            VpcId:
                Ref: Vpc
            SecurityGroupIngress:
                - Description: Allow inbound MySQL access from Lambda
                  IpProtocol: tcp
                  FromPort: 3306
                  ToPort: 3306
                  SourceSecurityGroupId:
                      Ref: AppSecurityGroup
            Tags:
                - Key: Name
                  Value: app-db-sg
    DhcpOptions:
        Type: 'AWS::EC2::DHCPOptions'
        Properties:
            DomainName: us-east-1.compute.internal
            DomainNameServers:
                - AmazonProvidedDNS
            Tags:
                - Key: Name
                  Value: app-DHCPOptionsSet
    DhcpOptionsAssociation:
        Type: 'AWS::EC2::VPCDHCPOptionsAssociation'
        Properties:
            VpcId:
                Ref: Vpc
            DhcpOptionsId:
                Ref: DhcpOptions
    NatGateway:
        Type: 'AWS::EC2::NatGateway'
        Properties:
            AllocationId:
                'Fn::GetAtt':
                    - NatGatewayElasticIp
                    - AllocationId
            SubnetId:
                Ref: SubnetPublicUsEast1a
            Tags:
                - Key: Name
                  Value: app
                - Key: Network
                  Value: Public
    NatGatewayElasticIp:
        Type: 'AWS::EC2::EIP'
        Properties:
            Domain: vpc
            Tags:
                - Key: Name
                  Value: app NAT Gateway
    RoutePrivateUsEast1a:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId:
                Ref: RouteTablePrivateUsEast1a
            NatGatewayId:
                Ref: NatGateway
    RoutePrivateUsEast1b:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId:
                Ref: RouteTablePrivateUsEast1b
            NatGatewayId:
                Ref: NatGateway
    RoutePrivateUsEast1c:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            RouteTableId:
                Ref: RouteTablePrivateUsEast1c
            NatGatewayId:
                Ref: NatGateway
Outputs:
    VpcId:
        Description: VPC ID
        Value:
            Ref: Vpc
    AppSecurityGroupId:
        Description: Application security group ID
        Value:
            Ref: AppSecurityGroup
    SubnetPrivateUsEast1aId:
        Description: Private subnet ID for zone us-east-1a
        Value:
            Ref: SubnetPrivateUsEast1a
    SubnetPrivateUsEast1bId:
        Description: Private subnet ID for zone us-east-1b
        Value:
            Ref: SubnetPrivateUsEast1b
    SubnetPrivateUsEast1cId:
        Description: Private subnet ID for zone us-east-1c
        Value:
            Ref: SubnetPrivateUsEast1c
